Added Nuget Package

--- a/ShowCase/ShowCase.csproj
+++ b/ShowCase/ShowCase.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NuGet.Build" Version="2.12.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StringLibrary\StringLibrary.csproj" />
   </ItemGroup>
 
