--- a/StringLibrary/StringLibrary.csproj
+++ b/StringLibrary/StringLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NuGet.Build" Version="2.12.1" />
+  </ItemGroup>
+
 </Project>
